--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,12 @@
-include: package:very_good_analysis/analysis_options.6.0.0.yaml
+include: package:very_good_analysis/analysis_options.yaml
+
+analyzer:
+  exclude:
+    - lib/src/localization/generated/**
+
 linter:
   rules:
+    prefer_single_quotes: true
+    sort_pub_dependencies: true
     public_member_api_docs: false
+    lines_longer_than_80_chars: false
