--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,26 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  collection: ^1.18.0
+  device_info_plus: ^11.1.0
+  devicelocale: ^0.8.1
+  equatable: ^2.0.5
+  flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.0.10+1
+  get_it: ^8.0.1
+  go_router: ^14.3.0
   intl: ^0.19.0
+  logger: ^2.4.0
+  package_info_plus: ^8.1.0
+  shared_preferences: ^2.3.2
+  skeletonizer: ^1.4.2
+  sprintf: ^7.0.0
+  version_tracker: ^2.4.1
 
 dev_dependencies:
   bloc_test: ^9.1.7
@@ -29,3 +43,28 @@ flutter_intl:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/svgs/
+
+  fonts:
+    - family: Jost
+      fonts:
+        - asset: assets/fonts/Jost-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Jost-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Jost-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Jost-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Jost-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Jost-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Jost-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Jost-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Jost-Black.ttf
+          weight: 900
