--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   collection: ^1.18.0
   device_info_plus: ^11.1.0
   devicelocale: ^0.8.1
+  dio: ^5.7.0
+  envied: ^0.5.4+1
   equatable: ^2.0.5
   flex_color_scheme: ^7.3.1
   flutter:
@@ -19,6 +21,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  geocoding: ^3.0.0
+  geolocator: ^13.0.1
   get_it: ^8.0.1
   go_router: ^14.3.0
   intl: ^0.19.0
@@ -31,6 +35,8 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.1.7
+  build_runner:
+  envied_generator: ^0.5.4+1
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.4
