--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  fluttertoast: ^8.2.8
   geocoding: ^3.0.0
   geolocator: ^13.0.1
   get_it: ^8.0.1
