--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   geolocator: ^13.0.1
   get_it: ^8.0.1
   go_router: ^14.3.0
+  graphic: ^2.5.0
   intl: ^0.19.0
   logger: ^2.4.0
   package_info_plus: ^8.1.0
