test: add mocks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dev_dependencies:
   envied_generator: ^0.5.4+1
   flutter_test:
     sdk: flutter
+  http_mock_adapter: ^0.6.1
+  mockito: ^5.4.4
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
