--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   device_info_plus: ^11.1.0
   devicelocale: ^0.8.1
   dio: ^5.7.0
-  envied: ^0.5.4+1
   equatable: ^2.0.5
+  firebase_analytics: ^11.3.3
+  firebase_core: ^3.6.0
+  firebase_remote_config: ^5.1.3
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
@@ -38,7 +40,6 @@ dependencies:
 dev_dependencies:
   bloc_test: ^9.1.7
   build_runner:
-  envied_generator: ^0.5.4+1
   flutter_test:
     sdk: flutter
   http_mock_adapter: ^0.6.1
